--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
             <div class="media-list">
                 <div class="media-item">
                     <h3>Superbad (2007)</h3>
-                    <img class="poster" src="/IMG/Movies/Poster/Superbad (2007).jpg" alt="Movie 1 Poster">
-                    <a href="/Embed/Movies/Superbad (2007).html" class="watch-now">Watch Now</a>
+                    <img class="poster" src="https://rhinopro122.github.io/ashtens-games-24.github.io//IMG/Movies/Poster/Superbad (2007).jpg" alt="Superbad (2007)">
+                    <a href="https://rhinopro122.github.io/ashtens-games-24.github.io//Embed/Movies/Superbad (2007).html" class="watch-now">Watch Now</a>
                 </div>
                 <div class="media-item">
                     <h3>Movie 2</h3>
