--- a/ebooks.html
+++ b/ebooks.html
@@ -30,3 +30,28 @@
     <main>
         <section id="ebooks">
             <h2>Ebooks</
+
+h2>
+            <div class="row">
+                <article>
+                    <h3>Title: To Kill a Mockingbird - Harper Lee</h3>
+                    <img src="img/ebooks/tokillamockingbird.jpg" alt="To Kill a Mockingbird Book Cover">
+                    <p>A novel about the serious issues of rape and racial inequality, but it is also full of warm humor and love.</p>
+                    <button onclick="readBook('tokillamockingbird.pdf')">Read Now</button>
+                </article>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Unblocked Games 24</p>
+    </footer>
+    <div id="player">
+        <video id="videoPlayer" controls></video>
+        <div id="player-controls">
+            <button onclick="pauseVideo()">Pause</button>
+            <button onclick="rewindVideo()">Rewind</button>
+            <button onclick="stopVideo()">Stop</button>
+        </div>
+    </div>
+</body>
+</html>
