--- a/movies.html
+++ b/movies.html
@@ -39,7 +39,7 @@
                 </article>
                 <article>
                     <h3>Beetlejuice (1988)</h3>
-                    <img src="img/movies/poster/Beetlejuice (1988).jpg" alt="Beetlejuice Poster">
+                    <img src="https://github.com/Rhinopro122/Unblocked-Games-24/blob/main/IMG/Movies/Poster/Beetlejuice%20(1988).jpg?raw=true" alt="Beetlejuice Poster">
                     <p>A recently deceased couple becomes ghosts haunting their former home and hires a devious poltergeist named Beetlejuice to scare away the new inhabitants.</p>
                     <button onclick="playMovie('beetlejuice.mp4')">Watch Now</button>
                 </article>
