--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="row">
                 <article>
                     <h3>Game Title</h3>
-                    <img src="IMG/Games/Game1.jpg" alt="Game 1">
+                    <img src="https://github.com/Rhinopro122/Unblocked-Games-24/blob/main/IMG/Games/Earn%20to%20Die.png?raw=true" alt="Earn To Die">
                     <button onclick="playGame('URL')">Play Now</button>
                 </article>
                 <!-- Add more games as needed -->
